# dont

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
codegen/: codegen.js  generator.js  type_traits.js
codegen/generators/: builtin_types.js
codegen/type_traits/: CMakeLists.txt  generate.js  tables.hpp  tt.cpp
example/: composed.c  example.c
include/: common.h  composed_inner.h  composition.h  composition_inner.h  dont.h  dot.h  object.h
src/: composition.c  dot.c  object.c
test/: compose.cpp  composition.cpp
